# mtg-rust

./: .gitignore  Cargo.toml  Makefile  Makefile-win  README.md  build.sh  cards.rs  meson.build  perm.rs  pile.rs  standard.rs  table.rs
decks/: 4-color.txt  grixis-light-red.txt  grixis-midrange.txt  grixis-std-UBr-1r.txt  grixis-std-UBr.txt  grixis-std-budget.txt  grixis-twins.txt  grixis-variant.txt  jeskai-control-next.txt  jeskai-control-orig.txt  jeskai-control.txt  loam.txt  modern-grixis-ext.txt  modern-ubr-midrange.txt  standard-esper.txt  standard-grixis.txt  std-non-green.txt  sultai.txt  temur.txt  ub-control-andrew-brown.txt  ub-control.txt  ub-splash-r.txt  ur-splash-b.txt  ur-twins.txt  ur.txt
examples/gui/: Cargo.toml
examples/gui/gl3/: lib.rs
gui/: Cargo.toml  sdl_main.rs
gui/gl3/: Cargo.toml  lib.rs
src/: cards.rs  colors.rs  deck-mod.txt  deck.txt  interval.rs  keys.rs  land.rs  lands.json  lib.rs  logic.rs  main.rs  mana.rs  meson.build  mtgjson.rs  perm.rs  pile.rs  prob.rs  standard.rs  table.rs
src/cmd/: main.rs
src/gl/: Cargo.toml  lib.rs
