[package]

name = "mtg"
version = "0.0.1"
authors = ["Pal-Kristian Engstad <mrengstad@gmail.com>"]
tags = []

[lib]
name = "mtg"
path = "src/lib.rs"

[dependencies.curl]
curl = "^0"

[dependencies]
rustc-serialize = "^0"

[dependencies]
regex = "*"

[dependencies]
num = "*"

# git = "https://github.com/engstad/curl-rust"
# path = "../curl-rust"
# git = "https://github.com/carllerche/curl-rust"

[[bin]]
name = "mtg"
path = "src/cmd/main.rs"
