project('lib', 'rust')

s = ['colors.rs', 'interval.rs', 'keys.rs', 'logic.rs', 'mana.rs', 'mtgjson.rs', 'perm.rs', 'pile.rs', 'prob.rs', 'standard.rs', 'table.rs', 'test.rs']
l = static_library('lib', ['lib.rs'], install : true)
# e = executable('main', 'main.rs', link_with : l, install : true)
# test('rusttest', e)
